--- a/helm/ephemeral/templates/hpa.yaml
+++ b/helm/ephemeral/templates/hpa.yaml
@@ -2,14 +2,16 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "ephemeral.fullname" . }}
+  name: {{ .Values.app.name }}
+  {{- with .Values.common.labels }}
   labels:
-    {{- include "ephemeral.labels" . | nindent 4 }}
+    {{- toYaml . | nindent 8 }}
+  {{- end }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "ephemeral.fullname" . }}
+    name: {{ .Values.app.name }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
