--- a/helm/ephemeral/templates/service.yaml
+++ b/helm/ephemeral/templates/service.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "ephemeral.fullname" . }}
+  name: {{ .Values.app.name }}
+  {{- with .Values.common.labels }}
   labels:
-    {{- include "ephemeral.labels" . | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "ephemeral.selectorLabels" . | nindent 4 }}
+    app: {{ .Values.app.name}}
+  ports:
+  - protocol: "TCP"
+    port: {{ .Values.service.port }}
+    targetPort: {{ .Values.service.target_port }}
+  type: LoadBalancer
